--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-.buttonLeft {
+.ButtonLeft {
 	background-color: #4caf50; 
 	border: 2px solid #000;
 	color: white;
@@ -11,7 +11,7 @@
 	cursor: pointer;
 }
 
-.buttonRight {
+.ButtonRight {
 	background-color: #d11d53; 
 	border: 2px solid #000;
 	color: white;
@@ -22,4 +22,16 @@
 	font-size: 16px;
 	margin: 4px 2px;
 	cursor: pointer;
+}
+
+.SwitchName {
+	background-color: blue; 
+	border: 2px solid #000;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
 }
