--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,19 @@
 	cursor: pointer;
 }
 
+.ButtonNotActive {
+	background-color: gray; 
+	border: 2px solid #000;
+	color: black;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+
 .SwitchName {
 	background-color: blue; 
 	border: 2px solid #000;
